--- a/frontend/EMS/package.json
+++ b/frontend/EMS/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0"
   },
